# oca-conductor

./: Cargo.toml  README.md  release.toml
.github/workflows/: crates.yml  npm-transformer.yml  npm-validator.yml  rust.yml
assets/: template.xlsx
bindings/ffi/validator/: Cargo.toml  build.rs
bindings/ffi/validator/src/: lib.rs  validator.rs  validator.udl
bindings/node.js/: .gitignore  Cargo.toml  README.md  package.json
bindings/node.js/config/transformer/: jest.ts-config.js  napi.config.json  tsconfig.json
bindings/node.js/config/validator/: jest.ts-config.js  napi.config.json  tsconfig.json
bindings/node.js/pkg/transformer/: package.json
bindings/node.js/pkg/transformer/test/: transformation.spec.ts
bindings/node.js/pkg/validator/: package.json
bindings/node.js/pkg/validator/test/: validation.spec.ts
bindings/node.js/src/: lib.rs  transformer.rs  validator.rs
bindings/node.js/test/: transformation.spec.ts  validation.spec.ts
conductor/: Cargo.toml
conductor/src/: errors.rs  lib.rs  transformation_result.rs  validation_result.rs
conductor/src/data_set/: csv_data_set.rs  json_data_set.rs  mod.rs
conductor/src/data_set_loader/: csv_data_set.rs  json_data_set.rs  mod.rs
conductor/src/transformator/: mod.rs
conductor/src/transformer/: data_set_transformer.rs  mod.rs
conductor/src/validator/: attribute_validator.rs  mod.rs
examples/glucose_records/: README.md  data_set.csv  template.xlsx  transformation_overlays.json
examples/glucose_records/demo_app/: README.md  index.ts  package-lock.json  package.json
zip_resolver/: Cargo.toml
zip_resolver/src/: lib.rs
