[package]
name = "oca_conductor"
description = "Lib for validating or tranforming data captured with OCA"
version = "0.2.11"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
validator = []
transformer = ["reqwest", "validator"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.1"
oca-rs = "0.2.29"
serde_json = { version = "1.0.82", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3.23"
dyn-clone = "1.0.9"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }

[dev-dependencies]
oca_zip_resolver = { path = "../zip_resolver" }
