[package]
name = "oca_zip_resolver"
description = "Lib for resolving OCA Bundle from zip file to OCA struct"
version = "0.2.8"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oca-rust = "0.2.22"
serde_json = "1.0.82"
zip = "0.6.2"
