[package]
name = "oca-conductor-node"
version = "0.2.8"
edition = "2021"
exclude = ["*.node"]

[lib]
crate-type = ["cdylib"]

[features]
validator = ["oca_conductor/validator"]
transformer = ["oca_conductor/transformer"]

[dependencies]
napi = { version = "2.6.3", features = ["serde-json"] }
napi-derive = "2.6.0"
oca-rust = "0.2.1"
oca_conductor = { path = "../../conductor" }
oca_zip_resolver = { path = "../../zip_resolver" }
serde_json = "1.0.82"

[build-dependencies]
napi-build = "2.0.1"
