[package]
name = "validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
validator = ["oca_conductor/validator"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
crate-type = ["cdylib"]
name = "validator"

[dependencies]
uniffi = { version = "0.23", features = ["cli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.82", features = ["preserve_order"] }
oca_conductor = { path = "../../../conductor" }
oca-rs = "= 0.2.29"

[build-dependencies]
uniffi = { version = "0.23", features = [ "build" ] }
